--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,20 @@
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
         <activity
             android:name=".Menu"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".Message"
             android:theme="@style/PopupMessage"
             android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".Splash"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+           android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
